--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
+    "mdbootstrap": "^4.5.7",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
