--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "reactstrap": "^6.3.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.3.1",
     "socket.io": "^2.0.3",
