--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
+    "react-stripe-elements": "^2.0.1",
     "reactstrap": "^6.3.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
@@ -62,6 +63,7 @@
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.3.1",
     "socket.io": "^2.0.3",
+    "stripe": "^6.5.0",
     "supertest-session": "^3.3.0"
   },
   "devDependencies": {
