--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "root": true,
+  "parser": "babel-eslint",
   "extends": ["fullstack", "prettier", "prettier/react"],
   "rules": {
     "semi": 0
-  }
+  },
+  "plugins": ["react"]
 }
