--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
+    "react-player": "^1.6.4",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
     "react-stripe-elements": "^2.0.1",
